testsuite/tests/typecheck/should_fail/T5978.stderr

T5978.hs:22:11: error:
    Couldn't match type ‘Bool’ with ‘Char’
    required by a functional dependency between:
      constraint ‘C Double Char’ required by a use of ‘polyBar’
      instance ‘C Double Bool’ at T5978.hs:8:10-22
    In the expression: polyBar id monoFoo
    In an equation for ‘monoBar’: monoBar = polyBar id monoFoo
